syntax = "proto3";

option go_package = "grpc";

import "types.proto";

service OrderBookManager {
  rpc OrderBook(OrderBookRequest) returns (OrderBookResponse);
  rpc Updates(OrderBookUpdatesRequest) returns (stream OrderBookResponse);
}

service Maker {
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse);
  rpc CheckQuote(CheckQuoteRequest) returns (CheckQuoteResponse);
}

service TransactionStatus {
    rpc OrderStatusUpdate(OrderStatusUpdateRequest) returns (OrderStatusUpdateResponse);
}

service HotWallet {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetTokenBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc GetEtherBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc GetAllowance(GetAllowanceRequest) returns (GetAllowanceResponse);
    rpc Transfer(TransferRequest) returns (TransferResponse);
}

service Watcher {
    rpc WatchTransaction(WatchTransactionRequest) returns (WatchTransactionResponse);
}
